crates/reinhardt-pages/tests/ui/page/fail/missing_closing_brace.rs
//! page! macro with unclosed brace

use reinhardt_pages::page;

fn main() {
	// Unclosed element - should fail
	let _invalid = page!(|| {
		div {
			"hello"
	});
}
