crates/reinhardt-pages/tests/ui/page/fail/missing_closing_brace.stderr
error: mismatched closing delimiter: `)`
  --> tests/ui/page/fail/missing_closing_brace.rs:7:26
   |
 7 |     let _invalid = page!(|| {
   |                         -   ^ unclosed delimiter
   |                         |
   |                         closing delimiter possibly meant for this
...
10 |     });
   |      ^ mismatched closing delimiter
